# can-i-run-ai-dashboard

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
data/raw_cache/huggingface/model/: MiniMaxAI-MiniMax-M1-40k-a5d5a1d82b01.json  MiniMaxAI-MiniMax-M1-40k-hf-5a3a1dcb5b02.json  MiniMaxAI-MiniMax-M1-80k-b413aa865fda.json  MiniMaxAI-MiniMax-M1-80k-hf-3d4e1eb9d354.json  MiniMaxAI-MiniMax-Text-01-cc56be70d2c7.json  Qwen-QwQ-32B-7271742932a6.json  Qwen-Qwen-1-8B-8b913471b214.json  Qwen-Qwen-1-8B-Chat-102fd887abdd.json  Qwen-Qwen-1-8B-Chat-Int4-8585080f32fd.json  Qwen-Qwen-1-8B-Chat-Int8-2d91038db056.json  Qwen-Qwen-14B-62f132bdd982.json  Qwen-Qwen-14B-Chat-6663af00f360.json  Qwen-Qwen-14B-Chat-Int4-5c55fc9f36c1.json  Qwen-Qwen-14B-Chat-Int8-8174e6466088.json  Qwen-Qwen-7B-Chat-Int8-7b079b260e57.json  Qwen-Qwen-Audio-392ae4abffab.json  Qwen-Qwen-Audio-Chat-16eae6b06f23.json  Qwen-Qwen-VL-29ac6f3e874b.json  Qwen-Qwen-VL-Chat-757722ff0f23.json  Qwen-Qwen-VL-Chat-Int4-9bdde0515a08.json  Qwen-Qwen2-0-5B-Instruct-0c9e155f9cbe.json  Qwen-Qwen2-0-5B-Instruct-AWQ-7e8f91f1b068.json  Qwen-Qwen2-0-5B-Instruct-GGUF-9d8716bc2530.json  Qwen-Qwen2-0-5B-Instruct-GPTQ-Int4-068e1a39579a.json  Qwen-Qwen2-0-5B-Instruct-GPTQ-Int8-d899cba6a044.json  Qwen-Qwen2-0-5B-Instruct-MLX-6b3c1cebec17.json  Qwen-Qwen2-0-5B-dc454cd5fd29.json  (+168 more)
data/specs/: cpu.json  gpu.json  model.json
helm/can-i-run-ai-dashboard/: Chart.yaml  values.yaml
helm/can-i-run-ai-dashboard/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  gateway.yaml  service.yaml  virtualservice.yaml
(+4 files in other folders)
